--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1569,7 +1569,7 @@ Aus diesen Überlegungen können wir folgendes Lemma schließen:
 \end{bsp}
 
 % satz 6.1.3
-\begin{satz}
+\begin{satz}\label{satz:6.13}
   Sei $f\colon C^{k}(\R^{n}, \R^{n-m}), c\in\R^{n-m}$. Wir definieren die
   folgende Menge:
   \begin{gather*}
@@ -2192,9 +2192,138 @@ eine $C^{k}$"~Mannigfaltigkeit ist.
   $C^{k}$"~Mannigfaltigkeit $M$.
 \end{defini}
 
+%Vorlesung vom 2008-12-11
+\section{Untermannigfaltigkeiten und weitere Eigenschaften differenzierbarer
+  Abbildungen zwischen Mannigfaltigkeiten}
+Sei $M$ eine $n$"~dimensionale Mannigfaltigkeit (zunächst ohne
+differenzierbare Struktur) und $m\leq n$ für ein $m$ aus den natürlichen
+Zahlen.
+\begin{defini}[Untermannigfaltigkeit]
+  Eine Teilmenge $M'\subseteq M$ heißt $m$"~dimensionale
+  \highl{Untermannigfaltigkeit} oder Mannigfaltigkeit der Codimension $n-m$,
+  falls für alle $x\in M$ eine Karte $(U,\phi,V)$ von $M$ existiert, so dass
+  \begin{gather*}
+    \phi(U\cap M')=V\cap(\R^{m}\times\{0\})
+  \end{gather*}
+  Dabei wird $\R^{m}$ als Teilraum von $\R^{n}$ aufgefasst.
+\end{defini}
+\missingfigure{Abbildung mit Illustration der Untermannigfaltigkeit einfügen}
 
+\begin{bemerk}
+  Eine Karte von $M$ mit der Eigenschaft heißt
+  $M$"~\highl[Angepasstheit]{angepasst}.
+\end{bemerk}
 
+\begin{bemerk}
+  Die Teilmenge $M'$ mit der relativen Topologie (Spurtopologie) ist selbst
+  eine $m$"~dimensionale Mannigfaltigkeit. Wir wählen die Karten
+  $(U',\phi',V')$ mit $U'\coloneq U\cap M', \phi'\coloneq\phi|_{U'}$ und
+  $V'\coloneq\phi'(U')$. Ein Spezialfall ist die $m$"~dimensionale
+  Mannigfaltigkeit des $\R^{n}$.
+\end{bemerk}
 
+\begin{defini}[$C^{k}$"~Untermannigfaltigkeit]
+  Sei $k\leq l$. Dann heißt $M'$ eine $C^{k}$"~Untermannigfaltigkeit der
+  $C^{l}$"~Mannigfaltigkeit $M$, falls die Karten aus der obigen Definition
+  aus der folgenden differenzierbaren Struktur gewählt werden können:
+  \begin{gather*}
+    \CD_{k}(\CD_{l}(M))
+  \end{gather*}
+\end{defini}
+
+\begin{bemerk}
+  Das $M'$ ist dann selbst eine $C^{k}$"~Mannigfaltigkeit mit der
+  differenzierbaren Struktur $\CD_{k}(\CA')$, wobei $\CA'\coloneq
+  \{(U'\coloneq U\cap M', \phi'\coloneq\phi|_{U'})\colon (U,\phi) \text{ aus
+  Atlas für $M$ gemäß obiger Definition}\}$.
+  \begin{proof}
+    Seien $\phi\colon U\rightarrow V$ und $\psi\colon U\rightarrow W$ zwei
+    $M'$"~angepasste Karten, sodass $\psi\circ\phi^{-1}$ eine
+    $C^{k}$"~Abbildung ist. Es gilt, $\phi'\coloneq\phi|_{U'}$ und
+    $\leq'\coloneq\psi|_{U'}$. Dann folgt, $\leq'\circ\phi'^{-1}=
+    \underbrace{\psi|_{U'}\circ (\phi|_{U'})^{-1}}_{(\psi\circ
+    \phi^{-1})|_{U'}}\colon V\cap \R^{m}\rightarrow W\cap\R^{m}$ ist eine
+    $C^{k}$"~Abbildung des $\R^{n}$. Also ist es eine Einschränkung auf
+    $V'\subset\R^{m}$ und ebenfalls $C^{k}$"~Abbildung.
+  \end{proof}
+\end{bemerk}
+
+Wir gehen nun wieder zum Spezialfall über: Sei $M=\R^{n}$ mit
+$\CD=\CD_{\infty}(\R^{n},\iota)$. Damit ergibt sich die Charakterisierung: Es
+ist $(U,\phi,V)\in\CD_{k}(\CD_{\infty}(\R^{n}))$ genau dann, wenn
+$\phi\circ\iota^{-1}\colon U\rightarrow V$ und $\iota\circ\phi^{-1}\colon
+V\rightarrow U$ jeweils $C^{k}$"~Abbildungen sind. Also muss $\phi$ ein
+$C^{k}$"~Diffeomorphismus sein.
+
+Für eine allgemeine $C^{k}$"~Untermannigfaltigkeit $M'$ kann $T_{X}M'$ mit
+$x\in M'$ als Unterraum von $T_{X}M$ aufgefasst werden. Zur Wiederholung:
+$T_{X}M= \{\{v\colon\CD_{x}(M)\rightarrow\R^{n}\}\text{ mit
+\autoref{eq:72-TR}}\}$. Wir wissen auch, dass $v$ bereits durch den Wert
+$\overline{v}=v(U,\phi)$ für eine feste Karte $(U,\phi)$ bestimmt ist. Nun
+wählen wir $(U,\phi)$ als $M'$"~angepasst und ordnen der Karte $(U',\phi')$ zu
+(wie oben). Dann können wir $T_{X}M'$ als Isomorphismus zu $\{v\in
+T_{X}M\colon v(U,\phi)= v'(U',\phi')\text{ für } v'\in T_{X}M'\}$ auffassen. Es
+werden $v$ und $v'$ identifiziert, da für jede $M'$"~angepasste Karte
+$(U,\psi)$ gilt: $v(U,\psi)=v'(U',\psi')$. Denn wir können folgern:
+\begin{align*}
+  v(U,\psi) &= D(\psi\circ\phi^{-1})(\underbrace{\phi(x)}_{\overline{x}})
+     \underbrace{v(U,\phi)}_{v'(U',\phi')}=
+     D(\psi\circ\phi^{-1})(\overline{x}) v'(U',\phi')\\
+  &= D(\psi\circ\phi^{-1})(\overline{x})|_{V'} v'(U',\phi')= D(\psi|_{U'}\circ
+     \phi^{-1}|_{U'})(\overline{x}) v'(U',\phi')\\
+  &= D(\psi'\circ\phi'^{-1})(\overline{x}) v'(U',\phi')= v'(U',\phi')
+\end{align*}
+Damit folgt für $v'\neq w'$ mit $v',w'\in T_{X}M'$, dass $v\neq w$ ist.
+
+Betrachten wir nun wieder den Spezialfall: Sei $M=\R^{n}$ mit der obigen
+Struktur und $(U,\phi)$ ist $M'$"~angepasst. Dann gilt, $v(\R^{n}, \iota)=
+D\phi^{-1}(\overline{x}) v(U,\phi)= D\phi^{-1}(\overline{x})
+\underbrace{v'(U',\phi')}_{\overline{v'}\in\R^{m}}= D\phi^{-1}(\overline{x})
+\overline{v'}$. Dies ist die Richtungsableitung der Parameterdarstellung in
+Richtung $\overline{v'}$ und entspricht den bekannten euklidischen Varianten
+für Flächen. \todo{In Anführungszeichen setzen}
+
+%satz 6.3.1
+\begin{satz}
+  Es ist $M$ genau dann eine $C^{k}$"~Untermannigfaltigkeit von $\R^{n}$ der
+  Dimension $m$, wenn für alle $x^{0}\in M$ eine offene Umgebung
+  $U\subset\R^{n}$ und eine $C^{k}$"~Abbildung $f\in C^{k}(U,\R^{n-m})$ mit
+  dem Rang von $Df(x)$ gleich $n-m$ für $x\in M\cap U$ existiert und $M\cap
+  U=f^{-1}(0_{n-m})$ mit $0_{n-m}\in\R^{n-m}$ ist.
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] Sei $(U,\phi,V)$ eine $M$"~angepasste Karte in
+      $\R^{n}$, d.\,h. $\phi$ ist ein $C^{k}$"~Diffeomorphismus von $U$ auf
+      $V$ mit $\phi(U\cap M)= V\cap(\R^{m}\cup\{0_{n-m}\})$.  Nun betrachten
+      wir die Hilfsabbildung $p(x_{1},\dotsc, x_{n})= (x_{m+1},\dotsc,
+      x_{n})$. Also die Projektion auf die letzten $n-m$ Koordinaten. Weiter
+      setzen wir $f=p\circ\phi$ mit $f\colon U\rightarrow\R^{n-m}$. Weiter ist
+      $f$ eine $C^{k}$"~Abbildung, denn $\phi$ ist $C^{k}$ und $p$ ist
+      $C^{\infty}$. Weiterhin ist der Rang von $Df(x)$ gleich $n-m$, da $Df=
+      Dp\circ D\phi$. Schließlich ist $f^{-1}(0_{n-m})= \{x=(x_{1},\dotsc,
+      x_{n})\in U\colon p\circ\phi(x)=0_{n-m}\}= \{x\in U\colon\phi(x)\in
+      V\cap(\R^{m}\times\{0\})\}= M\cap U$.
+     \item["`$\Leftarrow$"'] Vergleiche für den Teilbeweis auch
+      \autoref{satz:6.13} (Mannigfaltigkeiten als Lösungen von nichtlinearen
+      Gleichungssystemen). Wir modifizieren den Beweis mit
+      Untermannigfaltigkeiten. Sei o.\,B.\,d.\,A. $\det\left(\frac{\partial
+      f_{i}}{\partial x_{j}}(x^{0})\right)_{\substack{i=1,\dotsc,n-m\\
+      j=1,\dotsc,n-m}}\neq 0$. Ansonsten tauschen wir die Koordinaten $x_{j}$.
+      Wir betrachten die Abbildung $\phi\colon U\rightarrow\R^{n}$ mit
+      $\phi(x)\coloneq (x_{1},\dotsc, x_{m}, f(x))$ mit $x=(x_{1},\dotsc,
+      x_{n})$. Dann ist $\phi$ eine $C^{k}$"~Abbildung, da auch $f$ eine
+      $C^{k}$"~Abbildung ist und es gilt,
+      $\det(D\phi(x^{0}))\neq0$\footnote{Die Matrix von $D\phi(x^{0})$ hat
+      Dreiecksgestalt.}. Nach dem Satz über inverse Abbildungen existiert eine
+      offene Umgebung $U^{0}\subset U\subset\R^{n}$ von $x^{0}$ und
+      $V^{0}\subset\R^{n}$ von $\phi(x^{0}))$, sodass $\phi\colon
+      U^{0}\rightarrow V^{0}$ ein $C^{k}$"~Diffeomorphismus ist. Außerdem
+      gilt, $\phi(U^{0}\cap M)= \phi(U^{0}\cap f^{-1}(0))=
+      V^{0}\cap(\R^{m}\times\{0\})$ nach Konstruktion. Damit ist $(U^{0},
+      \phi)$ eine $M$"~angepasste Karte aus $\CD_{k}(\CD_{\infty}(\R^{n}))$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
 
 
 \clearpage
