kleine Schreibfehler beseitigt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1985 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -853,7 +853,8 @@ B(s,\epsilon)$ gibt.
      \item Wenn $M$ kompakt ist, dann folgt nach \autoref{satz:i.26} auch,
       dass es präkompakt und vollständig ist. Nach Punkt~(i) ist $M$ somit
       beschränkt. Die Vollständigkeit impliziert, dass $M$ auch abgeschlossen
-      ist. Denn ist $(x_{n})\subseteq M$ eine konvergente Folge in $X$. Dann
+      ist. Denn ist $(x_{n})\subseteq M$ eine konvergente Folge in
+      $X$, dann
       ist $(x_{n})$ eine Cauchyfolge in $M$ und da $M$ vollständig ist, ist
       $\lim x_{n}\in M$, d.\,h. $M$ abgeschlossen.
     \end{enumerate}
@@ -1707,7 +1708,7 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
      \item[(i)$\Rightarrow$(ii)] \autoref{satz:i.54}
      \item[(ii)$\Rightarrow$(iii)] Folgenkompaktheit in metrischen Räumen: Es
       ist $B_{X}$ kompakt. Dann folgt, $rB_{X}$ ist kompakt für $r>0$ wegen
-      \autoref{satz:i.213}. Sei $(x_{n})$ beschränkt, d.\,h. es exitiert ein
+      \autoref{satz:i.213}. Sei $(x_{n})$ beschränkt, d.\,h. es existiert ein
       $r>0$ mit $\norm{x_{n}}\leq r$ für $n\in\N$. Damit ist $(x_{n})\subset
       rB_{X}$. Da $rB_{X}$ kompakt, existiert eine konvergente Teilfolge von
       $(x_{n})$.
