--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -2877,7 +2877,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
     \deg\colon A[X_1, \ldots, X_n] \setminus \{0\} \rightarrow \N
   \end{gather*}
   \begin{enumerate}
-    \item $\deg (X_1^{m_1}\cdot\dotso  \cdot X_n^{m_n}) = m_1 + \ldots + m_n$,
+    \item $\deg (X_1^{m_1}\cdot\dotso  \cdot X_n^{m_n}) = m_1 + \dotsb + m_n$,
     
     \item $\deg (\sum_{m\in\N^{n}} a(m) X_1^{m_1}\cdot\dotso \cdot X_n^{m_n})
     = \max\{\deg(X_1^{m_1}\cdot\dotso \cdot X_n^{m_n}\colon a(m) \neq 0)\}$.
@@ -2888,7 +2888,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   Sei $A$ integer, $f, g \in A[X] \setminus \{0\}$. Dann gilt: $\deg (f \cdot
   g) = \deg (f) + \deg (g)$.
 \begin{proof}
-  Sei $f = a_0 + a_1 X + \ldots + a_m X^m, a_m \neq 0, g = b_0 + b_1 X + \ldots
+  Sei $f = a_0 + a_1 X + \dotsb + a_m X^m, a_m \neq 0, g = b_0 + b_1 X + \dotsb
   + b_n X^n, b_n \neq 0$. Dann folgt, $f \cdot g$ hat als Term von höchstem
   Grad $a_m b_n X^{m + n}$ und $a_m b_n \neq 0$ da $A$ integer.
 \end{proof}
@@ -2901,7 +2901,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 \begin{bemerk}
   Jedes Polynom $P \in A [X_1, \ldots, X_n]$ verursacht die Abbildung:
   \begin{align*}
-    f_p\colon A \times \ldots \times A &\rightarrow A\times\dotso \times A,\\
+    f_p\colon A \times \dotsb \times A &\rightarrow A\times\dotso \times A,\\
        (a_1, \ldots, a_n) &\mapsto P(a_1, \ldots, a_n) = \sum a (m) a_1^{m_1}
        \cdots a_n^{m_n}
   \end{align*}
@@ -2926,8 +2926,8 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
     \item $\deg (r) < \deg (g)$ oder $r = 0$.
   \end{enumerate}
   \begin{proof}
-    Sei $f = a_0 + a_1 X + \ldots + a_n X^n_{}, a_n \neq 0, g = b_0 + b_1 X +
-    \ldots + b_d X^d, b_d \neq 0$ sowie $b_d \in A^{*}$.
+    Sei $f = a_0 + a_1 X + \dotsb + a_n X^n_{}, a_n \neq 0, g = b_0 + b_1 X +
+    \dotsb + b_d X^d, b_d \neq 0$ sowie $b_d \in A^{*}$.
 
     Die trivialen Fälle sind $n = 0, d = 0 \Rightarrow r = 0, q = a_0 b_0^{-
     1}$ und $n = 0, d > 0 \Rightarrow r = f, q = 0$.
@@ -3463,7 +3463,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 \begin{defini}[algebraisches Körperelement]
   Sei $E/_F$ Körpererweiterung, $\alpha \in E$. Dann heißt $\alpha$
   \highl{algebraisch} über $F$, wenn ein $n\geq1$ und $a_{i}\in F$ (nicht alle
-  gleich 0) existieren, so dass $a_0 + a_1 \alpha + \ldots + a_n
+  gleich 0) existieren, so dass $a_0 + a_1 \alpha + \dotsb + a_n
   \alpha^n = 0$.
 \end{defini}
 
@@ -3509,7 +3509,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
   \begin{proof}
     Sei $[E\colon F] = n, \alpha \in E$. Dann sind $1, \alpha, \ldots,
     \alpha^n$ alle $F$-linear abhängig, also existieren $a_0, a_1, \ldots,
-    a_n\in F$ (nicht alle 0), so dass $a_0 + a_1 \alpha + \ldots + a_n
+    a_n\in F$ (nicht alle 0), so dass $a_0 + a_1 \alpha + \dotsb + a_n
     \alpha^n = 0$.
 \end{proof}
 \end{fakt}
@@ -3533,9 +3533,9 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 
     \begin{itemize}
      \item[Erzeugendensystem] Sei $\gamma \in E$. Dann existieren $a_1,
-      \ldots, a_m \in F$, so dass $\gamma = a_1 \alpha_1 + \ldots + a_m
+      \ldots, a_m \in F$, so dass $\gamma = a_1 \alpha_1 + \dotsb + a_m
       \alpha_m$. Weiter existieren $b_{i j} \in K$ mit $a_i = b_{i 1} \beta_1
-      + \ldots + b_{i n} \beta_n$. Einsetzen zeigt: $\gamma$ ist
+      + \dotsb + b_{i n} \beta_n$. Einsetzen zeigt: $\gamma$ ist
       $K$-Linearkombination der $\alpha_i \beta_j$.
      \item[Lineare Unabhängigkeit] Sei $\sum c_{i j} \alpha_i \beta_j = 0$ mit
       $c_{i j} \in K$. Dann folgt, $\sum_{i=1}^{n}
@@ -3653,7 +3653,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
     \item Ist $E/_K$ algebraisch, so erst recht $E/_F$ und $F/_K$.    
     Seien $E/_F$ und $F/_K$ algebraisch und $\alpha \in E$. Dann existiert
     $a_0, a_1, \ldots, a_n \in F$, nicht alle gleich 0, so dass $a_0 + a_1
-    \alpha + \ldots + a_n \alpha^n = 0$.
+    \alpha + \dotsb + a_n \alpha^n = 0$.
     
     Sei $F_0\coloneqq K(a_0, a_1, \ldots, a_n)$. Dann ist $F_0/_K$ sogar
     endlich und $\alpha$ algebraisch über $F_0$. Also ist $F_0(\alpha)/_K$
