--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -198,6 +198,7 @@
 \DeclareMathOperator{\cdm}{codim}
 \DeclareMathOperator{\graph}{graph}
 \DeclareMathOperator{\rg}{rank}
+\DeclareMathOperator{\vol}{vol}
 
 
 \renewcommand\thechapter{\Roman{chapter}}
@@ -3998,7 +3999,60 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
      \item Surjektivität: Es gilt: $(TQ)(\mathring{B}_{\tilde{x}})=
       T(\mathring{B}_{x})\Rightarrow\CE_{n}(TQ)=\CE_{n}(T)$.\\
       Injektivität: $\CE_{n}(JT)\leq \norm{J} \CE_{n}(T)= \CE_{n}(T)$, da $J$
-      metrische Injektion ist, folgt, $\norm{J}=1$. \todo{weiter schreiben}
+      metrische Injektion ist, folgt, $\norm{J}=1$. Für $\delta>0$ existieren
+      $\tilde{y_{1}},\dotsc,\tilde{y_{n}}\in\tilde{Y}$ mit
+      \begin{gather}
+	\label{eq:38}
+	   (JT)B_{x})\subset\bigcup_{i=1}^{n} \{\tilde{y_{i}}\}
+	   +\underbrace{(\CE_{n}(JT)+\delta)}_{=\colon r}B_{\tilde{Y}}
+      \end{gather}
+      Wir zeigen, dass $y_{i}\in Y$ und $\{\tilde{y_{i}}+rB_{\tilde{Y}}\subset
+      \{Jy_{i}\}+2rB_{\tilde{y}}\}$ existieren: Für
+      $\tilde{y_{i}}\in\tilde{Y}$  wählen wir $\tilde{z_{i}}\in(JT)(B_{x})\cap
+      (\{\tilde{y_{i}}\}+ rB_{\tilde{y}})$. Dann gilt, $\{\tilde{y_{i}}\}+
+      rB_{\tilde{y}}\subset\{\tilde{z_{i}}\}+2rB_{\tilde{y}}$. Denn es
+      existieren $\tilde{v}\in B_{\tilde{y}}$ mit $\tilde{z_{i}}=\tilde{y_{i}}
+      +r\tilde{y}$ und für $x\in\{\tilde{y_{i}}\}+rB_{\tilde{y}}$ gilt,
+      $x=\tilde{y_{i}}+ r\tilde{u}$ mit $\tilde{u}\in B_{\tilde{y}}$. Es gilt,
+      $x= \tilde{z_{i}} +r(\tilde{u}-\tilde{v})\in\{\tilde{z_{i}}\}+ 2r
+      B_{\tilde{y}}$. Wegen $\tilde{z_{i}}\in (JT)(B_{x})$ existieren
+      $y_{i}\in Y$ mit $\tilde{z_{i}}=Jy_{i}$. Somit ist $x\in\{Jy_{i}\}+
+      2rB_{\tilde{y}}$. Ferner gilt:
+      \begin{gather}
+	\label{eq:39}(\{Jy_{i}\}+2rB_{\tilde{y}})\cap J(Y)= \{Jy_{i}\}+
+	   2rJ(B_{y})
+      \end{gather}
+      Die \autoref{eq:39} wird über die zwei Teilmengenbeziehungen bewiesen.
+      Die Inklusion $\supseteq$ ist klar, da $J(B_{y})\subseteq
+      B_{\tilde{y}}$. Daher betrachten wir nun die Beziehung $\subseteq$.
+      Hierfür sei $z\in(\{Jy_{i}\}+2rB_{\tilde{y}})\cap J(Y)$, d.\,h. $z=
+      Jy_{i}+2r\tilde{u}$ mit $\tilde{u}\in B_{\tilde{y}}$. Wegen $z\in J(Y)$
+      und $Jy_{i}\in J(Y)$ ist $\tilde{u}\in B_{\tilde{y}}\cap J(Y)$. Damit
+      existiert ein $v\in Y, Jv=\tilde{u}$ und mit $\norm{v}=\norm{Jv}=
+      \norm{\tilde{u}}\leq1$ folgt, $v\in B_{y}$. Dies impliziert $z\in
+      \{J\tilde{y}\}+2rJ(B_{y})$. Also folgt \autoref{eq:39}.
+
+      Nun kombinieren wir die obigen Inklusionen und es folgt,
+      $(\{\tilde{y_{i}}\}+ rB\colon\tilde{y})\cap J(Y)\subset \{Jy_{i}\}+
+      2rJ(B_{y})= J(\{y_{i}\}+2rB_{y})\Rightarrow (JT)(B_{x})\subset
+      \bigcup_{i=1}^{n} (\{y_{i}\}+ rB_{\tilde{y}})\cap J(Y)\subset
+      \bigcup_{i=1}^{n} J(\{y_{i}\}+ 2rB_{y})= J(\bigcup_{i=1}^{n}
+      \{y_{i}\}+2rB_{y})\Rightarrow J(T(B_{x}))\subset J(\bigcup_{i=1}^{n}
+      (\{y_{i}\}+2rB_{y}))\Rightarrow T(B_{x})\subset \bigcup_{i=1}^{n}
+      \{y_{i}\} +2rB_{y}\Rightarrow \CE_{n}(T)\leq2r=
+      2(\CE_{n}(JT)+\delta)\Rightarrow \CE_{n}(T)\leq2\CE_{n}(JT)$.
+     \item $I_{x}(B_{x})= B_{x}\subset \bigcup_{i=1}^{n} (\{x_{i}\}+ \epsilon
+      B_{x})$\\
+      Wir betrachten das folgende Volumenmaß:
+      $\vol_{N}(M)\coloneq\lambda_{N}(A(M))$, wobei $\lambda_{N}$ das
+      Lebesgue-Maß auf dem $\R^{n}$ ist. Weiter sind $A\colon
+      X\rightarrow\R^{n}$ lineare Isomorphismen, $M$ ist eine Borelmenge in
+      $X$. Es gilt die Translationsinvarianz:
+      \begin{gather}
+	\label{eq:40}
+	   \vol_{N}(\{x\}+M)=\vol_{N}(M)\qquad x\in X
+      \end{gather}
+      \todo{weiter schreiben}
     \end{enumerate}
   \end{proof}
   \todo{Entropieeigenschaften beweisen}
