Rest des Beweises zu dyadischen Entropiezahlen
git-svn-id: https://svn.lug-jena.de/uni-skripte@2007 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -4052,7 +4052,43 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 	\label{eq:40}
 	   \vol_{N}(\{x\}+M)=\vol_{N}(M)\qquad x\in X
       \end{gather}
+      Es gilt: $0<\vol_{N}(B_{x})\leq\sum_{i=1}^{n} \vol_{N}(\{x_{i}\}+ \rho
+      B_{x})= \sum_{i=1}^{n} \vol_{N}(\epsilon B_{x})= n\vol_{N}(\epsilon
+      B_{x})$ Mit Anwendung der Transformationsformel können wir den folgenden
+      Schluss ziehen: $\vol_{N}(\epsilon B_{x})= \lambda_{N}(A(\epsilon
+      B_{x}))= \lambda_{N}(\epsilon A(B_{x}))= \abs{\det\epsilon I_{N}}
+      \lambda_{N}(A(B_{x}))= \epsilon^{N}\vol_{N}(B_{x})\Rightarrow
+      0<\vol_{N}(B_{x})\leq n\epsilon^{N}\vol_{N}(B_{x})\Rightarrow 1\leq
+      n\epsilon^{N}\Rightarrow n^{-\nicefrac{1}{N}}\leq\epsilon\Rightarrow
+      n^{-\nicefrac{1}{N}}\leq\CE_{n}(I_{x})$. Offensichtlich gilt:
+      $\CE_{n}(I_{x})\leq \CE_{1}(I_{x})=\norm{I_{x}}=1$.
+
+      Sei $0<\epsilon<\epsilon_{n}\leq1$. Wir zeigen, dass $x_{1},\dotsc, x_{n}\in
+      B_{x}$ existieren mit $\norm{x_{i}- x_{j}}>\CE$ für $i\neq j$. Sei
+      $x_{1}\in B_{x}$. Dann ist $B_{x}\setminus(\{x_{1}\}+ \epsilon B_{x})$
+      nicht leer und es existiert ein $x_{2}\in B_{x}$ mit
+      $\norm{x_{2}-x_{1}}>\epsilon$. Also ist auch
+      $B_{x}\setminus\bigcup_{i=1}^{2} (\{x_{i}\}+ \epsilon B_{x})$ nicht
+      leer. Induktiv können wir dann folgern, dass $B_{x}\setminus
+      \bigcup_{i=1}^{n-1} (\{x_{i}\}+ \epsilon B_{x})$ nichtleer ist und somit
+      ein $x_{n}\in B\colon x$ mit $\norm{x_{i}-x_{n}}>\epsilon$ für
+      $i=1,\dotsc,n-1$ existiert. Nach Konstruktion sind die Kugeln
+      $\{x_{i}\}+ \nicefrac{\epsilon}{2}B_{x}$ für $i=1,\dotsc,n$ disjunkt und
+      es gilt: $\{x_{i}\}+\nicefrac{\epsilon}{2}B_{x}\subset B_{x}+
+      \nicefrac{\epsilon}{2} B_{x}\subset\nicefrac{3}{2} B_{x}$. Damit ist
+      auch die obige Vereinigung eine Teilmenge von $\nicefrac{3}{2} B_{x}$.
+      Damit folgt, $n\vol_{N}(\nicefrac{\epsilon}{2}B_{x})= \sum_{i=1}^{n}
+      \vol_{N}(\nicefrac{\epsilon}{2}B_{x})= \sum_{i=1}^{n} \vol_{N}(\{x_{i}\}+
+      \nicefrac{\epsilon}{2}B_{x})= \vol_{N}(\bigcup_{i=1}^{n} (\{x_{i}\}+
+      \nicefrac{\epsilon}{2}B_{x})\leq\vol_{N}(\nicefrac{\epsilon}{2}B_{x}))$
+      und weiter $n(\nicefrac{\epsilon}{2})^{N} \vol_{N} (B_{x})= n\vol_{N}
+      (\nicefrac{\epsilon}{2}B_{x})\leq \vol_{N}(\nicefrac{3}{2}B_{x})=
+      (\nicefrac{3}{2})^{N} \vol_{N}(B_{x})$. Da $\vol_{N}(B_{x})>0$ ist,
+      haben wir, $n(\nicefrac{\epsilon}{2})^{N}\leq(\nicefrac{3}{2})^{N}$ und
+      insgesamt $\epsilon\leq 3n^{-\nicefrac{1}{N}}$. Damit ergibt sich
+      $\CE_{n}(I_{x})\leq3n^{-\nicefrac{1}{N}}$.
       \todo{weiter schreiben}
+      E
     \end{enumerate}
   \end{proof}
   \todo{Entropieeigenschaften beweisen}
