kleinere Fehler am Beginn von Kapitel III behoben
git-svn-id: https://svn.lug-jena.de/uni-skripte@2011 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -1465,7 +1465,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
 
     Nun verbleibt noch die Surjektivität zu zeigen: Sei $[x]\in X/_M$. Wegen
     $x=x_{1}+ x_{2}$ mit $x_{1}\in M_{1}, x_{2}\in M$ folgt, $[x]=Q_{M}(x)=
-    Q_{M}(x_{1}+x_{2})= \underbrace{Q_{M}(x_{1})}_{=0}ü Q_{M}(x_{2})=
+    Q_{M}(x_{1}+x_{2})= \underbrace{Q_{M}(x_{1})}_{=0}+ Q_{M}(x_{2})=
     Q_{M}(x_{2})=\phi(x_{2})$.\todo{Abschnitt nochmal klarer aufschreiben}
   \end{proof}
 \end{satz}
@@ -1744,10 +1744,13 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
 \section{Grundbegriffe}
 \begin{defini}[Lineare Abbildung, Funktional]
   \begin{enumerate}[(i)]
-   \item Eine Abbildung $T\colon X\rightarrow$ von einem Vektorraum $X$ in
+   \item Eine Abbildung $T\colon X\rightarrow Y$ von einem Vektorraum $X$ in
     einen Vektorraum $Y$ heißt genau dann \highl[Abbildung!lineare]{lineare Abbildung}
-    oder \highl[Operator!linearer]{linearer Operator}, wenn $\forall x,y\in
-    X\,\forall\alpha,\beta\in\K\colon T(\alpha x+\beta y)= \alpha Tx+ \beta Ty$.
+    oder \highl[Operator!linearer]{linearer Operator}, wenn für alle $x,y\in
+    X$ und für alle $\alpha,\beta\in\K$ gilt:
+    \begin{gather*}
+      T(\alpha x+\beta y)= \alpha Tx+ \beta Ty
+    \end{gather*}    
    \item Ist $Y=(\K,\abs{\cdot})$, so heißen die linearen Operatoren $T\colon
     X\rightarrow Y$ \highl[Funktional!lineares]{lineare Funktionale}. Man
     schreibt häufig $Tx$ statt $T(x)$.
@@ -1818,17 +1821,16 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
   Seien $S,T\colon X\rightarrow Y$ lineare Operatoren von einem Vektorraum $X$
   in einen Vektorraum $Y$ und $\alpha\in\K$ eine Zahl. Dann sind $S+T, \alpha
   T\colon X\rightarrow Y$ durch $(S+T)x\coloneq Sx+Tx$ bzw. $(\alpha
-  T)x\coloneq \alpha (Tx)$ für $x\in X$ definiert.
-
-  Es gilt, dass $S+T, \alpha T$ wieder lineare Operatoren sind.
+  T)x\coloneq \alpha (Tx)$ für $x\in X$ definiert. Es sind $S+T$ und $\alpha
+  T$ lineare Operatoren.
 
   Der Raum $\CL_{0}(X,Y)\coloneq \{T\colon X\rightarrow Y\colon T\text{
   linear}\}$ ist wieder ein Vektorraum.
-
-  Seien $\CL(X,Y)\coloneq \{T\colon X\rightarrow
-  Y\colon T\text{ beschränkter linearer Operator}\}$ sowie $X$ und $Y$
-  normierte Räume.
 \end{defini}
+
+
+Seien $\CL(X,Y)\coloneq \{T\colon X\rightarrow Y\colon T\text{ beschränkter
+linearer Operator}\}$ sowie $X$ und $Y$ normierte Räume.
 
 %satz II.2.1
 \begin{satz}\label{satz:ii.2.1}
