Das nur ein chapter. Die parts kommen naechstes Semester
git-svn-id: https://svn.lug-jena.de/uni-skripte@2016 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -4319,7 +4319,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   ($X,Y$ komplexe Banachräume).
 \end{lem}
 
-\part{Elemente der Hilbertraumtheorie}
+\chapter{Elemente der Hilbertraumtheorie}
 
 \section{Prähilbert- und Hilberträume}
 
