--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -325,7 +325,8 @@ Damit kommen wir zum ersten Satz:
   ist. Dann ist $m$ auch eine gerade Zahl.
   \begin{gather*}\forall m \in \N (m^2 \text{ gerade}\Rightarrow m \text{ gerade})\end{gather*}
   \begin{proof}
-    Nehmen wir an, $m$ sei ungerade. Dann gilt für ein $k \in\N$ folgende
+    Nehmen wir an, $m$ sei ungerade. Dann gibt es für ein $k \in\N$
+    die folgende
     Darstellung: $m=2k+1$. Also folgt: $m^{2}= (2k+1)^{2} = 4k^{2}+ 4k+1=
     2(2k^{2}+2k)+1$. Wenn nun $2k^{2}+2k=n$ setzen, haben wir $2n+1$. Also ist
     $m^{2}$ wieder eine ungerade Zahl. Wir haben durch einfache Umformungen
@@ -336,17 +337,19 @@ Damit kommen wir zum ersten Satz:
 
 \subsection{Körperaxiome}
 
-Für den Zahlkörper $\R$ lassen sich einige Axiome feststellen:
-
+Eine ausführliche Diskussion zu Körpern und deren Eigenschaften wird
+in der linearen Algebra durchgeführt. Unten sind nur einige wichtige
+Ergebnisse für den Zahlkörper $\R$ aufgelistet:
 \begin{description}
 \item[Kommutativgesetz] $a \cdot{} b = b \cdot{} a$
 \item[Assoziativgesetz] $(a \cdot{} b) \cdot{} c = a \cdot{} (b
   \cdot{} c)$
 \item[Existenz und Eindeutigkeit des neutralen Elements] Es gibt eine
-  von $0$ verschiedene Zahl $1$: $\forall a \in \R \colon a \cdot 1 = a$
-\item[Eindeutigkeit der Lösbarkeit der Gleichung] $a \cdot x = 1, a
-  \neq 0, \forall a \in \R, a \neq 0, \exists{}^1 x \in \R \colon a \cdot x
-  = 1, x = a^{-1}$
+  von $0$ verschiedene Zahl $1$, so dass für alle reellen Zahlen $a$
+  gilt: $a \cdot 1 = a$
+\item[Eindeutigkeit der Lösbarkeit der Gleichung] Zu jeder reellen
+  Zahl $a$ gibt es genau eine reelle Zahl $x$ mit der Eigenschaft $a
+  \cdot x = 1$ oder $x = a^{-1}$.
 \item[Distributivgesetz] $a \cdot (b+c) = a \cdot b + a \cdot c$
 \end{description}
 
@@ -431,7 +434,7 @@ und entspricht dem Maximum von $a$ und $-a$.
   für den Fall $a<0$. Weiterhin ist auch $-a\leq\max\{a,-a\}$. Für $a,b\in\R$
   gilt dann: $a+b\leq\max\{a,-a\}+\max\{b,-b\}=\abs{a}+\abs{b}$ und
   $-a-b= (-a)+(-b)\leq\max\{a,-a\}+\max\{b\}= \abs{a}+ \abs{b}$.
-  Nun folgt aus beiden Aussagen, $\abs{a+b}= \max\{a+b, -a-b=-(a+b)\}=
+  Nun folgt aus beiden Aussagen, $\abs{a+b}= \max\{a+b, -a-b=-(a+b)\}
   \leq\max\{\abs{a}+\abs{b}, \abs{a}+\abs{b}\}= \abs{a}+\abs{b}$.
   \begin{enumerate}
   \item[$3'$] $\abs{\abs{a}-\abs{b}} \leq \abs{a-b}, \abs{\abs{a}-\abs{b}} \leq \abs{a+b}$\\
@@ -504,22 +507,26 @@ auch $S_2 \leq S_1$. Daraus folgt nun aber $S_1= S_2$.
       \leq S$. Wegen $S-\varepsilon < S$ ($S$ ist kleinste obere Schranke)
       existiert ein $x \in M$ mit $S - \varepsilon < x$.
     \item[$2\Leftarrow1$] Sei $S'$ obere Schranke von $M$. Wir müssen zeigen:
-      $S \leq S'$. Nehmen wir an $S'<S \Rightarrow \exists \varepsilon > 0
-      \colon S'+\varepsilon < S \stackrel{\text{(2.)}}{\Rightarrow} \exists x
-      \in M\colon S'<S<\varepsilon <x \Rightarrow x$ ist echt größer als $S'$.
-      \lightning Also folgt, $ S'$ ist keine obere Schranke von $M$.
+      $S \leq S'$. Nehmen wir das Gegenteil $S'<S$ an. Dann gibt es
+      ein $\varepsilon > 0$ mit $S'+\varepsilon < S$. Wegen der
+      Eigenschaften der Kleinerrelation gilt auch $S'<S-\varepsilon$
+      und aus der zweiten Eigenschaft der obigen Bemerkung gibt es ein
+      $x\in M$ mit $S- \varepsilon<x$. Insgesamt ergibt sich also
+      $S'<S-\varepsilon<x$. Wir haben also gezeigt, dass $x$ echt
+      größer als $S'$ ist. Dies steht in Widerspruch zu unserer
+      Annahme. Also ist $S'$ ist keine obere Schranke von $M$.
 \end{itemize}
   \end{proof}
 \end{remark}
 
 \subsubsection{Untere Schranke und Infimum}
-Eine Menge $M \subset \R$ heißt \highl[beschränkt!nach unten]{nach unten
-beschränkt}: $\Leftrightarrow \exists s\in\R \forall x \in M \colon x \geq S$.
-Dann heißt $s \in \R$ \highl{Infimum}\footnote{Schreibweise:
-  $s=\inf M$}: $\Leftrightarrow$
+Eine Menge $M \subset \R$ heißt genau dann \highl[beschränkt!nach
+unten]{nach unten beschränkt}, wenn für alle $x\in M$ ein $s\in\R$
+existiert, dass gilt: $x \geq s$. Das $s$ heißt genau dann
+\highl{Infimum}\footnote{Schreibweise: $s=\inf M$}, wenn gilt:
 \begin{enumerate}
-\item $s$ ist untere Schranke
-\item $s$ ist größte untere Schranke
+\item Die Zahl $s$ ist untere Schranke
+\item Die Zahl $s$ ist größte untere Schranke
 \end{enumerate}
 
 \begin{theorem}
