Zweites Kapitel ueberarbeitet
Einige Formeln habe ich ausgeschrieben. Das sollte besser lesbar
sein. Weiterhin wurde ein offenes TODO wahrscheinlich aufgeloest.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2033 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -277,7 +277,7 @@
 
 Die Topologie wurde zu großen Teilen erst im letzten Jahrhundert entwickelt.
 Ihr Name leitet sich von den griechischen Worten für Ort und Lehre ab. Früher
-war auch der Name Analysis situs (Untersuchung der Lage) gebräuchlich.
+war auch der Name "`Analysis situs"' (Untersuchung der Lage) gebräuchlich.
 
 Das Ziel dieser Vorlesung ist die Einführung der Grundlagen der
 mengentheoretischen Topologie. Diese wird auch als allgemeine Topologie
@@ -307,7 +307,7 @@ auf \textsc{Georg Cantor} zurück.
 
 %def 1.1
 \begin{defini}[Topologie]\label{def:11}
-  Eine \highl{Topologie} $\CT$ auf einer Menge $X\neq\emptyset$ ist ein System von
+  Eine \highl{Topologie} $\CT$ auf einer nichtleeren Menge $X$ ist ein System von
   Teilmengen von $X$ mit:
   \begin{enumerate}[(i)]
    \item $\emptyset,X\in\CT$
@@ -383,10 +383,10 @@ auf \textsc{Georg Cantor} zurück.
 \end{bemerk}
 
 %def 1.6
-\begin{defini}[Innerer Punkt, Inneres]
+\begin{defini}[Innerer Punkt, Inneres]\label{def:16}
   Ein Punkt $x\in A\subset X$ heißt \highl[Punkt!innerer]{innerer Punkt} von
-  $A$ bezüglich $(X,\CT)$, falls eine Umgebung $U_{x}$ existiert mit
-  $U_{x}\subset A$.
+  $A$ bezüglich $(X,\CT)$, falls eine Umgebung $U_{x}$ von $x$ existiert, die
+  Teilmenge von $A$ ist. Also: $\exists U_{x}\colon U_{x}\subset A$.
 
   Die Menge $\mathring{A}$ aller inneren
   Punkte von $A$ heißt \highl[Kern!offener]{offener Kern} oder \highl{Inneres}
@@ -415,13 +415,14 @@ auf \textsc{Georg Cantor} zurück.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}[(i)]
-     \item Nach der Definition existiert zu jedem $x\in \mathring{A}$ ein
+     \item Nach der \autoref{def:16} existiert zu jedem $x\in \mathring{A}$ ein
       $U_{x}\in\CT$ mit
-      $U_{x}\subset A\Rightarrow \mathring{A} \subset\bigcup_{x\in
+      $U_{x}\subset A$. Also ist $\mathring{A} \subset\bigcup_{x\in
       \mathring{A}} U_{x}$. Weiter ist zu zeigen, $\bigcup_{x\in \mathring{A}}
       U_{x}\subset\mathring{A}$. Nun
       ist $U_{x}$ aber auch Umgebung für jedes $y\in U_{x}$. Somit ist $y\in
-      \mathring{A}$. Also ist $\mathring{A}=\bigcup_{x\in \mathring{A}}U_{x}$.
+      \mathring{A}$. Also ist $\mathring{A}=\bigcup_{x\in
+        \mathring{A}}U_{x}$ und damit offen.
     \item Wir zeigen $\overline{\overline{A}}=\overline{A}$. Es ist
       klar, dass $\overline{A}\subset\overline{\overline{A}}$. Sei nun
       $x\in\overline{\overline{A}}$. Dann existiert für alle
@@ -484,21 +485,22 @@ auf \textsc{Georg Cantor} zurück.
   \begin{proof}
     \begin{enumerate}[(i)]
      \item folgt sofort aus der Definition des Abschlusses.
-     \item Sei $\overline{A_{i_{0}}}$\todo{Hier fehlt das Ende des Satzes.}. Dann gilt:
-      $\overline{A_{i_{0}}}\subset\overline{\bigcup_{i\in I} A_{i}}$ (folgt
-      aus obigem Punkt) für alle $i_{0}\in
-      I\Rightarrow \bigcup_{i\in I} \overline{A}_{i}\subset
+     \item Sei $A_{i_{0}}\subset \bigcup_{i\in I} A_{i}$\todo{Ist das
+         so korrekt? Bei mir stand vorher was anderes.}. Dann gilt für alle $i_{0}\in
+      I$ nach dem ersten Punkt,
+      $\overline{A_{i_{0}}}\subset\overline{\bigcup_{i\in I} A_{i}}$
+      und es folgt sofort, $\bigcup_{i\in I} \overline{A}_{i}\subset
       \overline{\bigcup_{i\in I} A_{i}}$.
       Weiter ist $\bigcap_{i\in I} A_{i} \subset\bigcap_{i\in
-      I}\overline{A_{i}}\Rightarrow\overline{\bigcap_{i\in I} A_{i}}\subset
-      \bigcap_{i\in I} \overline{A_{i}}$
+      I}\overline{A_{i}}$ und es folgt, $\overline{\bigcap_{i\in I} A_{i}}\subset
+      \overline{\bigcap_{i\in I} \overline{A_{i}}}= \bigcap_{i\in I} \overline{A_{i}}$.
      \item folgt aus dem untenstehenden dritten Punkt
     \end{enumerate}
   \end{proof}
 
   \begin{enumerate}[(i)]
    \item $A\subset B\Rightarrow \mathring{A}\subset \mathring{B}$
-   \item Sei $I\neq\emptyset$ beliebig. Dann ist $\mathring{\bigcap_{i\in I}
+   \item Sei $I$ ein beliebiger nichtleerer Index. Dann ist $\mathring{\bigcap_{i\in I}
     A_{i}}\subset\bigcap_{i\in I} \mathring{A}_{i}, \bigcup_{i\in I}
     \mathring{A}_{i}\subset \mathring{\bigcup_{i\in I} A_{i}}$
    \item $\mathring{\bigcap_{i=1}^{n} A_{i}}= \bigcap_{i=1}^{n}
@@ -508,13 +510,13 @@ auf \textsc{Georg Cantor} zurück.
     \begin{enumerate}[(i)]
      \item folgt aus der Definition und der Übungsaufgabe
      \item folgt aus der Definition und der Übungsaufgabe
-     \item $x\in\bigcap_{i=1}^{n} \mathring{A}_{i}\Rightarrow\bigcap_{i=1}^{n}
+     \item Sei $x\in\bigcap_{i=1}^{n} \mathring{A}_{i}$. Dann ist $\bigcap_{i=1}^{n}
       \mathring{A}_{i}$ ist eine Umgebung von $x$ in $\bigcap_{i=1}^{n} A_{i}$.
-      Daraus folgt, $x$ ist innerer Punkt von $\bigcap_{i=1}^{n} A_{i},
-      x\in \mathring{\bigcap_{i=1}^{n} A_{i}}\Rightarrow \bigcap_{i=1}^{n}
-      \mathring{A}_{i} \subset \mathring{\bigcap_{i=1}^{n} A_{i}}$. Umgekehrte
-      Inklusion
-      folgt aus dem zweiten Punkt.
+      Daraus folgt, dass $x$ innerer Punkt von $\bigcap_{i=1}^{n}
+      A_{i}$ und gilt, $x\in \mathring{\bigcap_{i=1}^{n}
+        A_{i}}$. Somit haben wir die Inklusion $\bigcap_{i=1}^{n}
+      \mathring{A}_{i} \subset \mathring{\bigcap_{i=1}^{n}
+        A_{i}}$. Die umgekehrte Inklusion folgt aus dem obenstehenden zweiten Punkt.
     \end{enumerate}
   \end{proof}
 \end{lem}
