kleine Fehler ausgebessert und Definitionen geklaert
Einige Schreibfehler wurde verbessert. Die Definition des
Zusammenhangs in Worten beschrieben. Die Definition von Immersion und
Submersion in zwei Punkte getrennt. Der Namensgeber eines Satzes hiess
Sard und nicht Sand.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2053 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -773,8 +773,10 @@ zur nächsten Definition:
     ist $B(x,r)\coloneq \{y\in X\colon d(x,y)<r\}$ und $\CB\coloneq \{B(a,r)\colon
     a\in A, r\in\Q\}$. Wir zeigen, dass $\CB$ Basis in $\CT_{d}$. Dazu genügt
     es zu zeigen, dass für alle $G\in\CT_{d}\,\forall x\in G\,\exists
-    B(a,r)\in\CB$ mit $x\in B(a,r)\subset G$. Da $G$ offen, folgt, dass es
-    Kugel $B(x,\epsilon)\subset G$ gibt. Da $A$ dicht ist, gibt es ein $a\in
+    B(a,r)\in\CB$ mit $x\in B(a,r)\subset G$. Da $G$ offen ist, folgt,
+    dass es eine
+    Kugel $B(x,\epsilon)\subset G$ gibt. Da $A$ dicht ist, gibt es
+    also einen Berührungspunkt $a\in
     A$ mit $d(x,a)<\nicefrac{\epsilon}{3}$. Wir wählen ein genügend kleines
     $\nicefrac{\epsilon}{3}<r<\nicefrac{2}{3}\epsilon$. Also ist $x\in B(a,r)$.
 
@@ -1153,9 +1155,12 @@ auszuschließen, führt man zusätzlich folgende Axiome ein:
 
 \begin{defini}[Zusammenhang]
   Sei $(X,\CT)$ ein topologischer Raum. Er heißt
-  \highl{zusammenhängend}\index{Zusammenhang},
-  falls $X\neq F_{1}\cup F_{2}$ mit $F_{1}\cap F_{2}=\emptyset$ und
-  $F_{1}, F_{2}\in\CT^{c}\setminus\{\emptyset\}$.
+  \highl{zusammenhängend}\index{Zusammenhang}\index{Menge!zusammenhängende
+},
+  falls sich $X$ nicht als Vereinigung zweier nichtleerer disjunkter
+  abgeschlossener Mengen darstellen lässt. Also $X\neq F_{1}\cup
+  F_{2}$ mit $F_{1}\cap F_{2}=\emptyset$ und $F_{1},
+  F_{2}\in\CT^{c}\setminus\{\emptyset\}$.
 \end{defini}
 
 %lem 4.2
@@ -2183,10 +2188,10 @@ Symbol $\partial_{i}= \frac{\partial}{\partial x_{i}}$.
     Df(x)\circ Df^{-1}(f(x))$. Damit ist $Df^{-1}$ gerade die inverse
     Abbildung zu $Df$, also $(Df(x))^{-1}= D(f^{-1})(x)$.
 
-    Die Rückrichtung der ersten Aussage ist das Analogon zum satz über inverse
+    Die Rückrichtung der ersten Aussage ist das Analogon zum Satz über inverse
     Abbildungen im Euklidischen. Dazu seien $(U,\phi), (V,\psi)$ Karten um $x$
     bzw. $f(x)$ aus der differenzierbaren Struktur. Wir betrachten
-    $D(\psi\circ f\phi^{-1})(\phi(x))$. Nach Voraussetzung ist das ein
+    $D(\psi\circ f\circ \phi^{-1})(\phi(x))$. Nach Voraussetzung ist das ein
     Isomorphismus des $\R^{n}$ und wir bezeichnen $\phi(x)= \overline{x}$
     sowie $g\coloneq\psi\circ f\circ\phi^{-1}$. Damit muss gelten:
     $\det(Dg(\overline{x}))\neq0$ und $g$ muss nach Voraussetzung in einer
@@ -2302,7 +2307,7 @@ auf $TM$.
   \end{proof}
 \end{satz}
 
-\paragraph{Differenziere Struktur auf $TM$}
+\paragraph{Differenzierbare Struktur auf $TM$}
 Wir betrachten einen Atlas $\{(TU, T\phi,
 Z\times\R^{n})\colon(U,\phi,Z)\in\CD(M)\}$ auf $TM$ mit der Konstruktion wie
 oben und den Kartenwechsel $(U,\phi)\rightarrow(U',\phi')$ innerhalb des
@@ -2350,7 +2355,7 @@ Zahlen.
 
 \begin{bemerk}
   Die Teilmenge $M'$ mit der relativen Topologie (Spurtopologie) ist selbst
-  eine $m$"~dimensionale Mannigfaltigkeit. Wir wählen die Karten
+  eine  Mannigfaltigkeit der Dimension~$m$. Wir wählen die Karten
   $(U',\phi',V')$ mit $U'\coloneq U\cap M', \phi'\coloneq\phi|_{U'}$ und
   $V'\coloneq\phi'(U')$. Ein Spezialfall ist die $m$"~dimensionale
   Mannigfaltigkeit des $\R^{n}$.
@@ -2368,8 +2373,7 @@ Zahlen.
 \begin{bemerk}
   Das $M'$ ist dann selbst eine $C^{k}$"~Mannigfaltigkeit mit der
   differenzierbaren Struktur $\CD_{k}(\CA')$, wobei $\CA'\coloneq
-  \{(U'\coloneq U\cap M', \phi'\coloneq\phi|_{U'})\colon (U,\phi) \text{ aus
-  Atlas für $M$ gemäß obiger Definition}\}$.
+  \{(U', \phi'\colon (U,\phi) \text{ aus Atlas für $M$ gemäß obiger Definition}\}$.
   \begin{proof}
     Seien $\phi\colon U\rightarrow V$ und $\psi\colon U\rightarrow W$ zwei
     $M'$"~angepasste Karten, sodass $\psi\circ\phi^{-1}$ eine
@@ -2468,9 +2472,14 @@ für Flächen.
 \end{defini}
 
 \begin{defini}[Immersion/""Submersion]
-  Eine Abbildung $f\colon M\rightarrow N$ heißt \highl{Immersion}
-  (\highl{Submersion}), falls $f$ differenzierbar und $Df(x)$ in jedem $x\in
-  M$ injektiv (surjektiv) ist.
+  \begin{itemize}
+  \item Eine Abbildung $f\colon M\rightarrow N$ heißt
+    \highl{Immersion}, falls $f$ differenzierbar und $Df(x)$ in jedem
+    $x\in M$ injektiv ist.
+  \item Eine Abbildung $f\colon M\rightarrow N$ heißt
+    \highl{Submersion}, falls $f$ differenzierbar und $Df(x)$ in jedem
+    $x\in M$ surjektiv ist.
+  \end{itemize}
 \end{defini}
 
 \begin{bemerk}
@@ -2510,9 +2519,10 @@ Wir wollen die obigen Eigenschaften nun lokalisieren. Dazu sei die Abbildung
 $f\colon M\rightarrow N$ differenzierbar.
 
 \begin{defini}[singulärer/""regulärer Punkt]
-  Ein Punkt $x\in M$ heißt (\highl[Punkt!singulärer]{singulärer} oder
-  \highl[Punkt!kritischer]{kritischer}) \highl[Punkt!regulärer]{regulärer
-  Punkt} von $f$, falls $Df(x)$ (nicht) surjektiv ist.
+  Ein Punkt $x\in M$ heißt \highl[Punkt!regulärer]{regulärer Punkt}
+  von $f$, falls $Df(x)$ surjektiv ist. Wenn die Surjektivität nicht
+  gilt, heißt der Punkt \highl[Punkt!singulärer]{singulärer} oder
+  \highl[Punkt!kritischer]{kritischer Punkt}.
 \end{defini}
 
 \begin{defini}[singulärer, regulärer Wert]
@@ -2528,7 +2538,7 @@ $f\colon M\rightarrow N$ differenzierbar.
 \end{defini}
 
 %satz 6.3.4
-\begin{satz}[Satz von Sand (1934)]
+\begin{satz}[Satz von \textsc{Sard} (1934)]
   Sei $f\colon M\rightarrow N$ eine $C^{\infty}$"~Abbildung. Dann ist die
   Menge der singulären Werte von $f$ eine \textsc{Lebesguemaß}sche Nullmenge.
   \begin{proof}
@@ -2577,7 +2587,7 @@ Untermannigfaltigkeiten. Sei dazu $m\geq n$.
         &= h\circ\psi(\{x\in U^{0}\colon g\circ\psi(x)=0\})= h\circ\psi(\{x\in
            U^{0}\colon g(\overline{x})=0\})\\
         &= h(\{\overline{x}\colon\overline{g}(\overline{x})=0\})=
-           \tilde{V^{0}}\cap (\{0\}\times\R^{m-n}
+           \tilde{V^{0}}\cap (\{0\}\times\R^{m-n})
       \end{align*}
       Für beliebiges $x^{0}$ ist dann $P$ eine $(m-n)$"~dimensionale
       Untermannigfaltigkeit von $M_{m}$. Die Karten $(U^{0}, \phi)$ sind mit
@@ -2963,8 +2973,8 @@ Verträglichkeitseigenschaften.
   $(a,b)$ in der Produkttopologie mit $f(U')\subset U$ gibt. Nach der
   Definition der Produkttopologie gibt es offene Umgebungen $U_{a}, U_{b}$ mit
   $U_{a}\times U_{b}\subset U'$, d.\,h. $\underbrace{f(U_{a}\times
-  U_{b})}_{U_{a}U_{b}}\subset U$. Das ist gleichbedeutend mit $U_{a}U_{b
-  \subset U}$.
+  U_{b})}_{U_{a}U_{b}}\subset U$. Das ist gleichbedeutend mit $U_{a}U_{b}
+  \subset U$.
 
   Das ist auch eine Charakterisierung für die Stetigkeit: $a,b)\mapsto ab$
   stetig $\Leftrightarrow\forall$ offene Umgebung $U$ von $ab$ $\exists$
