Abschnitt 8.3 Zusammenhangskomponenten eingefuegt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2056 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -3401,6 +3401,47 @@ Die Komponente der Eins ist von besonderem Interesse.
   \end{proof}
 \end{lem}
 
+%satz 8.3.3
+\begin{satz}
+  Sei $(G,\CT)$ eine zusammenhängende topologische Gruppe und $e\in U\in\CT$
+  beliebig. Dann folgt:
+  \begin{gather*}
+    G= \bigcup_{n=1}^{\infty} U^{n}
+  \end{gather*}
+  \begin{proof}
+    Wir setzen $V\coloneq\bigcup_{n=1}^{\infty} U^{n}$ offen. Es ist $V$ auch
+    abgeschlossen. Für ein $a\in\overline{V}$ und $aU^{-1}$ offen folgt, dass
+    ein $b\in aU^{-1}\cap V$ existiert. Wegen der Konstruktion des $V$ gibt es
+    somit ein $n\in\N$ mit $b\in U^{n}$ und das kann durch $b=u_{1}\cdot\dotso
+    \cdot u_{n}$ für $u_{i}\in U$ dargestellt werden. Es gilt, $b\in
+    aU^{-1}\Rightarrow b=au_{n+1}^{-1}$ mit $u_{n+1}\in U$. Somit ist
+    $a=u_{1}\cdot\dotso \cdot u_{n}u_{n+1}\in U^{n+1}$. Also liegt $a$ in $V$
+    und $V$ ist abgeschlossen. Damit ist $V=G$ und die Behauptung gezeigt.
+  \end{proof}
+\end{satz}
+
+Nun wollen wir die Zusammenhangskomponenten geometrischer
+Transformationsgruppen des $\R^{n}$ studieren. Dort spielt ein schärferer
+Begriff des Zusammenhangs eine Rolle. Hierfür machen wir einen Einschub:
+\begin{defini}[Wegzusammenhängend]
+  Der topologische Raum $(X,\CT)$ heißt \highl{wegzusammenhängend}, falls für
+  alle $a,b \in X$ eine stetige Kurve $c\colon[0,1]\rightarrow X$ mit $c(0)=a$
+  und $c(1)=b$ existiert.
+\end{defini}
+
+\begin{bemerk}
+  Man sagt auch $X$ ist wegweise oder pfadweise zusammenhängend. Aus dem
+  wegweisen Zusammenhang folgt der Zusammenhang. Denn falls $X$ nicht zusammen
+  hängt, so gilt, $X=A\cup B, A\cap B=\emptyset$ sowie die $A$ und $B$ sind
+  offen, aber nicht leer. Es folgt, $[0,1]=f^{-1}(X)= f^{-1}(A)\cup f^{-1}(B)$.
+
+  Die Umkehrung der obigen Aussage gilt in der Regel nicht.
+\end{bemerk}
+
+\begin{bsp}
+  Die Menge $X=\{(X,\sin\ln x)\colon x>0\}\cup\{0\}\times[-1,1]$ ist
+  zusammenhängend, aber nicht wegweise zusammenhängend.
+\end{bsp}
 
 
 \todo[inline]{fehlende Vorlesungen einfügen}
